[gd_scene load_steps=13 format=3 uid="uid://cq2oel00he2y5"]

[ext_resource type="Texture2D" uid="uid://dewsbuvt3fvws" path="res://Assets/TileMaps/Supermarket/MarketSet_Tileset.png" id="1_lmtah"]
[ext_resource type="PackedScene" uid="uid://c84cxg7156886" path="res://Scenes/player.tscn" id="2_c368n"]
[ext_resource type="Script" path="res://Scripts/prateleiras.gd" id="2_sxmoh"]
[ext_resource type="Texture2D" uid="uid://b4et7q20ecvjj" path="res://Assets/UI/Game Prompts/Transparent/Letters.png" id="3_akny5"]
[ext_resource type="PackedScene" uid="uid://ytvygxlugbgb" path="res://Scenes/map.tscn" id="4_yam1f"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7sj58"]
texture = ExtResource("1_lmtah")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 4.68458, -8, 2.91681)
0:0/0/physics_layer_0/polygon_1/points = PackedVector2Array(-8, 3.62392, -8, 8, 4.68458, 8, 5.92202, 3.27037)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 5.74524, -8, 5.92202)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 3.27037, -5.74524, 6.0988, -3.27037, 8, 8, 8, 8, -8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.27557, -8, 6.45235, 8, -8, 8, -8, -8, -8, -8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.86136, -8, -5.56847, 8, 5.92202, 8, 8, 8, 8, -8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 5.03814, -8, 6.45235, -5.92202, 8, -4.86136, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -6.27557, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.74004, -8, -4.86136, -5.92202, -8, -3.09359, -8, 8, 8, 8, 8, -8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
4:7/0 = 0
4:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -2.74004, 8, -2.91682, 8, -8, -8, -8)
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
4:9/0 = 0
4:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:9/0/physics_layer_0/angular_velocity = 0.0
5:9/0 = 0
5:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:9/0/physics_layer_0/angular_velocity = 0.0
6:9/0 = 0
6:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:9/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_x1vam"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7sj58")

[sub_resource type="AtlasTexture" id="AtlasTexture_wvo7l"]
atlas = ExtResource("3_akny5")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c83e3"]
atlas = ExtResource("3_akny5")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3m1f8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvo7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c83e3")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4o7xh"]
size = Vector2(46, 10.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sxm4r"]
size = Vector2(38, 15)

[node name="tileMap_supermarket" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_x1vam")
format = 2
layer_0/name = "floor"
layer_0/tile_data = PackedInt32Array(1638422, 393216, 5, 1572886, 393216, 5, 1507350, 393216, 5, 1441814, 393216, 5, 1376278, 393216, 5, 1310742, 393216, 5, 1245206, 393216, 5, 1179670, 393216, 5, 1114134, 393216, 5, 1048598, 393216, 5, 983062, 393216, 5, 917526, 393216, 5, 917525, 393216, 5, 917524, 393216, 5, 917523, 393216, 5, 917522, 393216, 5, 917521, 393216, 5, 917520, 393216, 5, 917519, 393216, 5, 917518, 393216, 5, 917517, 393216, 5, 917516, 393216, 5, 917515, 393216, 5, 917514, 393216, 5, 917513, 393216, 5, 917512, 393216, 5, 983048, 393216, 5, 1048584, 393216, 5, 1114120, 393216, 5, 1179656, 393216, 5, 1245192, 393216, 5, 1310728, 393216, 5, 1376264, 393216, 5, 1441800, 393216, 5, 1507336, 393216, 5, 1572872, 393216, 5, 1638408, 393216, 5, 1638409, 393216, 5, 1572873, 393216, 5, 1507337, 393216, 5, 1441801, 393216, 5, 1376265, 393216, 5, 1310729, 393216, 5, 1245193, 393216, 5, 1179657, 393216, 5, 1114121, 393216, 5, 1048585, 393216, 5, 983049, 393216, 5, 983050, 393216, 5, 1048586, 393216, 5, 1114122, 393216, 5, 1179658, 393216, 5, 1245194, 393216, 5, 1310730, 393216, 5, 1376266, 393216, 5, 1441802, 393216, 5, 1507338, 393216, 5, 1572874, 393216, 5, 1638410, 393216, 5, 1638411, 393216, 5, 1572875, 393216, 5, 1507339, 393216, 5, 1441803, 393216, 5, 1376267, 393216, 5, 1310731, 393216, 5, 1245195, 393216, 5, 1179659, 393216, 5, 1114123, 393216, 5, 1048587, 393216, 5, 983051, 393216, 5, 983052, 393216, 5, 1048588, 393216, 5, 1114124, 393216, 5, 1179660, 393216, 5, 1245196, 393216, 5, 1310732, 393216, 5, 1376268, 393216, 5, 1441804, 393216, 5, 1507340, 393216, 5, 1572876, 393216, 5, 1638412, 393216, 5, 1638413, 393216, 5, 1572877, 393216, 5, 1507341, 393216, 5, 1441805, 393216, 5, 1376269, 393216, 5, 1310733, 393216, 5, 1245197, 393216, 5, 1179661, 393216, 5, 1114125, 393216, 5, 1048589, 393216, 5, 983053, 393216, 5, 983054, 393216, 5, 1048590, 393216, 5, 1114126, 393216, 5, 1179662, 393216, 5, 1245198, 393216, 5, 1310734, 393216, 5, 1376270, 393216, 5, 1441806, 393216, 5, 1507342, 393216, 5, 1572878, 393216, 5, 1638414, 393216, 5, 1638415, 393216, 5, 1572879, 393216, 5, 1507343, 393216, 5, 1441807, 393216, 5, 1376271, 393216, 5, 1310735, 393216, 5, 1245199, 393216, 5, 1179663, 393216, 5, 1114127, 393216, 5, 1048591, 393216, 5, 983055, 393216, 5, 983056, 393216, 5, 1048592, 393216, 5, 1114128, 393216, 5, 1179664, 393216, 5, 1245200, 393216, 5, 1310736, 393216, 5, 1376272, 393216, 5, 1441808, 393216, 5, 1507344, 393216, 5, 1572880, 393216, 5, 1638416, 393216, 5, 1638417, 393216, 5, 1572881, 393216, 5, 1507345, 393216, 5, 1441809, 393216, 5, 1376273, 393216, 5, 1310737, 393216, 5, 1245201, 393216, 5, 1179665, 393216, 5, 1114129, 393216, 5, 1048593, 393216, 5, 983057, 393216, 5, 983058, 393216, 5, 1048594, 393216, 5, 1114130, 393216, 5, 1179666, 393216, 5, 1245202, 393216, 5, 1310738, 393216, 5, 1376274, 393216, 5, 1441810, 393216, 5, 1507346, 393216, 5, 1572882, 393216, 5, 1638418, 393216, 5, 1638419, 393216, 5, 1572883, 393216, 5, 1507347, 393216, 5, 1441811, 393216, 5, 1376275, 393216, 5, 1310739, 393216, 5, 1245203, 393216, 5, 1179667, 393216, 5, 1114131, 393216, 5, 1048595, 393216, 5, 983059, 393216, 5, 983060, 393216, 5, 1048596, 393216, 5, 1114132, 393216, 5, 1179668, 393216, 5, 1245204, 393216, 5, 1310740, 393216, 5, 1376276, 393216, 5, 1441812, 393216, 5, 1507348, 393216, 5, 1572884, 393216, 5, 1638420, 393216, 5, 1638421, 393216, 5, 1572885, 393216, 5, 1507349, 393216, 5, 1441813, 393216, 5, 1376277, 393216, 5, 1310741, 393216, 5, 1245205, 393216, 5, 1179669, 393216, 5, 1114133, 393216, 5, 1048597, 393216, 5, 983061, 393216, 5, 1638423, 393216, 5, 1572887, 393216, 5, 1507351, 393216, 5, 1441815, 393216, 5, 1376279, 393216, 5, 1310743, 393216, 5, 1245207, 393216, 5, 1179671, 393216, 5, 1114135, 393216, 5, 1048599, 393216, 5, 983063, 393216, 5, 917527, 393216, 5, 917528, 393216, 5, 983064, 393216, 5, 1048600, 393216, 5, 1114136, 393216, 5, 1179672, 393216, 5, 1245208, 393216, 5, 1310744, 393216, 5, 1376280, 393216, 5, 1441816, 393216, 5, 1507352, 393216, 5, 1572888, 393216, 5, 1638424, 393216, 5, 1638425, 393216, 5, 1572889, 393216, 5, 1507353, 393216, 5, 1441817, 393216, 5, 1376281, 393216, 5, 1310745, 393216, 5, 1245209, 393216, 5, 1179673, 393216, 5, 1114137, 393216, 5, 1048601, 393216, 5, 983065, 393216, 5, 917529, 393216, 5, 917530, 393216, 5, 983066, 393216, 5, 1048602, 393216, 5, 1114138, 393216, 5, 1179674, 393216, 5, 1245210, 393216, 5, 1310746, 393216, 5, 1376282, 393216, 5, 1441818, 393216, 5, 1507354, 393216, 5, 1572890, 393216, 5, 1638426, 393216, 5, 1638427, 393216, 5, 1572891, 393216, 5, 1507355, 393216, 5, 1441819, 393216, 5, 1376283, 393216, 5, 1310747, 393216, 5, 1245211, 393216, 5, 1179675, 393216, 5, 1114139, 393216, 5, 1048603, 393216, 5, 983067, 393216, 5, 917531, 393216, 5, 917532, 393216, 5, 983068, 393216, 5, 1048604, 393216, 5, 1114140, 393216, 5, 1179676, 393216, 5, 1245212, 393216, 5, 1310748, 393216, 5, 1376284, 393216, 5, 1441820, 393216, 5, 1507356, 393216, 5, 1572892, 393216, 5, 1638428, 393216, 5, 1638429, 393216, 5, 1572893, 393216, 5, 1507357, 393216, 5, 1441821, 393216, 5, 1376285, 393216, 5, 1310749, 393216, 5, 1245213, 393216, 5, 1179677, 393216, 5, 1114141, 393216, 5, 1048605, 393216, 5, 983069, 393216, 5, 917533, 393216, 5, 917534, 393216, 5, 983070, 393216, 5, 1048606, 393216, 5, 1114142, 393216, 5, 1179678, 393216, 5, 1245214, 393216, 5, 1310750, 393216, 5, 1376286, 393216, 5, 1441822, 393216, 5, 1507358, 393216, 5, 1572894, 393216, 5, 1638430, 393216, 5, 1638431, 393216, 5, 1572895, 393216, 5, 1507359, 393216, 5, 1441823, 393216, 5, 1376287, 393216, 5, 1310751, 393216, 5, 1245215, 393216, 5, 1179679, 393216, 5, 1114143, 393216, 5, 1048607, 393216, 5, 983071, 393216, 5, 917535, 393216, 5, 1703964, 393216, 5, 1703965, 393216, 5)
layer_1/name = "wall"
layer_1/tile_data = PackedInt32Array(851976, 393216, 7, 851977, 393216, 7, 851978, 393216, 7, 851979, 393216, 7, 851980, 393216, 7, 851981, 393216, 7, 851982, 393216, 7, 851983, 393216, 7, 851984, 393216, 7, 851985, 393216, 7, 851986, 393216, 7, 851987, 393216, 7, 851988, 393216, 7, 851989, 393216, 7, 851990, 393216, 7, 851991, 393216, 7, 851992, 393216, 7, 851993, 393216, 7, 851994, 393216, 7, 851995, 393216, 7, 851996, 393216, 7, 851997, 393216, 7, 851998, 393216, 7, 851999, 393216, 7, 589832, 393216, 6, 655368, 393216, 6, 720904, 393216, 6, 786440, 393216, 6, 589833, 393216, 6, 655369, 393216, 6, 720905, 393216, 6, 786441, 393216, 6, 589834, 393216, 6, 655370, 393216, 6, 720906, 393216, 6, 786442, 393216, 6, 589835, 393216, 6, 655371, 393216, 6, 720907, 393216, 6, 786443, 393216, 6, 589836, 393216, 6, 655372, 393216, 6, 720908, 393216, 6, 786444, 393216, 6, 589837, 393216, 6, 655373, 393216, 6, 720909, 393216, 6, 786445, 393216, 6, 589838, 393216, 6, 655374, 393216, 6, 720910, 393216, 6, 786446, 393216, 6, 589839, 393216, 6, 655375, 393216, 6, 720911, 393216, 6, 786447, 393216, 6, 589840, 393216, 6, 655376, 393216, 6, 720912, 393216, 6, 786448, 393216, 6, 589841, 393216, 6, 655377, 393216, 6, 720913, 393216, 6, 786449, 393216, 6, 589842, 393216, 6, 655378, 393216, 6, 720914, 393216, 6, 786450, 393216, 6, 589843, 393216, 6, 655379, 393216, 6, 720915, 393216, 6, 786451, 393216, 6, 589844, 393216, 6, 655380, 393216, 6, 720916, 393216, 6, 786452, 393216, 6, 589845, 393216, 6, 655381, 393216, 6, 720917, 393216, 6, 786453, 393216, 6, 589846, 393216, 6, 655382, 393216, 6, 720918, 393216, 6, 786454, 393216, 6, 589847, 393216, 6, 655383, 393216, 6, 720919, 393216, 6, 786455, 393216, 6, 589848, 393216, 6, 655384, 393216, 6, 720920, 393216, 6, 786456, 393216, 6, 589849, 393216, 6, 655385, 393216, 6, 720921, 393216, 6, 786457, 393216, 6, 589850, 393216, 6, 655386, 393216, 6, 720922, 393216, 6, 786458, 393216, 6, 589851, 393216, 6, 655387, 393216, 6, 720923, 393216, 6, 786459, 393216, 6, 589852, 393216, 6, 655388, 393216, 6, 720924, 393216, 6, 786460, 393216, 6, 589853, 393216, 6, 655389, 393216, 6, 720925, 393216, 6, 786461, 393216, 6, 589854, 393216, 6, 655390, 393216, 6, 720926, 393216, 6, 786462, 393216, 6, 589855, 393216, 6, 655391, 393216, 6, 720927, 393216, 6, 786463, 393216, 6, 1572871, 0, 1, 1507335, 0, 1, 1441799, 0, 1, 1376263, 0, 1, 1310727, 0, 1, 1245191, 0, 1, 1179655, 0, 1, 1114119, 0, 1, 1048583, 0, 1, 983047, 0, 1, 917511, 0, 1, 851975, 0, 1, 786439, 0, 1, 720903, 0, 1, 655367, 0, 1, 589831, 0, 1, 524295, 0, 0, 524296, 65536, 0, 524297, 65536, 0, 524298, 65536, 0, 524299, 65536, 0, 524300, 65536, 0, 524301, 65536, 0, 524302, 65536, 0, 524303, 65536, 0, 524304, 65536, 0, 524305, 65536, 0, 524306, 65536, 0, 524307, 65536, 0, 524308, 65536, 0, 524309, 65536, 0, 524310, 65536, 0, 524311, 65536, 0, 524312, 65536, 0, 524313, 65536, 0, 524314, 65536, 0, 524315, 65536, 0, 524316, 65536, 0, 524317, 65536, 0, 524318, 65536, 0, 524319, 65536, 0, 524320, 131072, 0, 589856, 131072, 1, 655392, 131072, 1, 720928, 131072, 1, 786464, 131072, 1, 852000, 131072, 1, 917536, 131072, 1, 983072, 131072, 1, 1048608, 131072, 1, 1114144, 131072, 1, 1179680, 131072, 1, 1245216, 131072, 1, 1310752, 131072, 1, 1376288, 131072, 1, 1441824, 131072, 1, 1507360, 131072, 1, 1572896, 131072, 1, 1638432, 131072, 1, 1703943, 0, 2, 1638407, 0, 1, 1703944, 65536, 2, 1703945, 65536, 2, 1703946, 65536, 2, 1703947, 65536, 2, 1703948, 65536, 2, 1703949, 65536, 2, 1703950, 65536, 2, 1703951, 65536, 2, 1703952, 65536, 2, 1703953, 65536, 2, 1703954, 65536, 2, 1703955, 65536, 2, 1703956, 65536, 2, 1703957, 65536, 2, 1703958, 65536, 2, 1703959, 65536, 2, 1703960, 65536, 2, 1703961, 65536, 2, 1703962, 65536, 2, 1703963, 65536, 2, 1703966, 65536, 2, 1703967, 65536, 2, 1703968, 131072, 2)
layer_2/name = "decoration"
layer_2/tile_data = PackedInt32Array()
layer_3/name = "forniture"
layer_3/tile_data = PackedInt32Array(1441801, 196608, 2, 1507337, 196608, 3, 1441802, 262144, 2, 1507338, 262144, 3, 1441803, 327680, 2, 1507339, 327680, 3, 1441805, 196608, 2, 1507341, 196608, 3, 1441806, 262144, 2, 1507342, 262144, 3, 1441807, 327680, 2, 1507343, 327680, 3, 1245193, 196608, 2, 1310729, 196608, 3, 1245194, 262144, 2, 1310730, 262144, 3, 1245195, 327680, 2, 1310731, 327680, 3, 1245197, 196608, 2, 1310733, 196608, 3, 1245198, 262144, 2, 1310734, 262144, 3, 1245199, 327680, 2, 1310735, 327680, 3, 1048585, 196608, 2, 1114121, 196608, 3, 1048586, 262144, 2, 1114122, 262144, 3, 1048587, 327680, 2, 1114123, 327680, 3, 1048589, 196608, 2, 1114125, 196608, 3, 1048590, 262144, 2, 1114126, 262144, 3, 1048591, 327680, 2, 1114127, 327680, 3, 1507354, 393216, 0, 1572890, 393216, 1, 1507356, 393216, 0, 1572892, 393216, 1, 1507358, 393216, 0, 1572894, 393216, 1)
layer_4/name = "objects"
layer_4/tile_data = PackedInt32Array(851997, 196608, 4, 917533, 196608, 5, 851998, 262144, 4, 851999, 327680, 4, 917535, 327680, 5, 851994, 196608, 4, 917530, 196608, 5, 851995, 262144, 4, 917531, 262144, 5, 851996, 327680, 4, 917532, 327680, 5, 1048602, 0, 3, 1114138, 0, 4, 1179674, 0, 5, 1245210, 0, 6, 1048605, 0, 3, 1114141, 0, 4, 1179677, 0, 5, 1245213, 0, 6, 786440, 65536, 7, 786441, 65536, 7, 786442, 65536, 7, 786443, 65536, 7, 851976, 65536, 8, 851977, 65536, 8, 851978, 65536, 8, 851979, 65536, 8, 786444, 131072, 7, 851980, 131072, 8, 786445, 393216, 2, 851981, 393216, 3, 917517, 393216, 4, 786448, 393216, 2, 851984, 393216, 3, 917520, 393216, 4, 786451, 393216, 2, 851987, 393216, 3, 917523, 393216, 4, 917534, 262144, 5, 1441812, 196608, 0, 1507348, 196608, 1, 1441813, 262144, 0, 1507349, 262144, 1, 1441814, 327680, 0, 1507350, 327680, 1, 1310740, 196608, 0, 1376276, 196608, 1, 1310741, 262144, 0, 1376277, 262144, 1, 1310742, 327680, 0, 1376278, 327680, 1, 1179668, 196608, 0, 1245204, 196608, 1, 1179669, 262144, 0, 1245205, 262144, 1, 1179670, 327680, 0, 1245206, 327680, 1, 1048596, 196608, 0, 1114132, 196608, 1, 1048597, 262144, 0, 1114133, 262144, 1, 1048598, 327680, 0, 1114134, 327680, 1, 720924, 196608, 6, 786460, 196608, 7, 720925, 262144, 6, 786461, 262144, 7, 720926, 327680, 6, 786462, 327680, 7, 720918, 196608, 6, 786454, 196608, 7, 720919, 262144, 6, 786455, 262144, 7, 720920, 327680, 6, 786456, 327680, 7)
layer_5/name = "outros"
layer_5/tile_data = PackedInt32Array(720905, 196608, 6, 786441, 196608, 7, 720906, 262144, 6, 786442, 262144, 7, 720907, 327680, 6, 786443, 327680, 7)

[node name="prateleiras" type="Node2D" parent="."]
position = Vector2(224, 292)
script = ExtResource("2_sxmoh")

[node name="key_E" type="AnimatedSprite2D" parent="prateleiras"]
visible = false
position = Vector2(9, -41)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_3m1f8")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="prateleiras"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="prateleiras/Area2D"]
position = Vector2(8, -4.25)
shape = SubResource("RectangleShape2D_4o7xh")

[node name="prateleiras2" type="Node2D" parent="."]
position = Vector2(161, 292)
script = ExtResource("2_sxmoh")

[node name="key_E" type="AnimatedSprite2D" parent="prateleiras2"]
visible = false
position = Vector2(9, -41)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_3m1f8")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="prateleiras2"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="prateleiras2/Area2D"]
position = Vector2(7, -4.25)
shape = SubResource("RectangleShape2D_4o7xh")

[node name="prateleiras3" type="Node2D" parent="."]
position = Vector2(224, 340)
script = ExtResource("2_sxmoh")

[node name="key_E" type="AnimatedSprite2D" parent="prateleiras3"]
visible = false
position = Vector2(9, -41)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_3m1f8")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="prateleiras3"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="prateleiras3/Area2D"]
position = Vector2(8, -4.25)
shape = SubResource("RectangleShape2D_4o7xh")

[node name="prateleiras4" type="Node2D" parent="."]
position = Vector2(160, 340)
script = ExtResource("2_sxmoh")

[node name="key_E" type="AnimatedSprite2D" parent="prateleiras4"]
visible = false
position = Vector2(9, -41)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_3m1f8")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="prateleiras4"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="prateleiras4/Area2D"]
position = Vector2(8, -4.25)
shape = SubResource("RectangleShape2D_4o7xh")

[node name="prateleiras5" type="Node2D" parent="."]
position = Vector2(224, 388)
script = ExtResource("2_sxmoh")

[node name="key_E" type="AnimatedSprite2D" parent="prateleiras5"]
visible = false
position = Vector2(9, -41)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_3m1f8")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="prateleiras5"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="prateleiras5/Area2D"]
position = Vector2(8, -4.25)
shape = SubResource("RectangleShape2D_4o7xh")

[node name="prateleiras6" type="Node2D" parent="."]
position = Vector2(161, 388)
script = ExtResource("2_sxmoh")

[node name="key_E" type="AnimatedSprite2D" parent="prateleiras6"]
visible = false
position = Vector2(9, -41)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_3m1f8")
autoplay = "default"

[node name="Area2D" type="Area2D" parent="prateleiras6"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="prateleiras6/Area2D"]
position = Vector2(7, -4.25)
shape = SubResource("RectangleShape2D_4o7xh")

[node name="map" parent="." instance=ExtResource("4_yam1f")]
position = Vector2(461, 409)

[node name="Area2D" type="Area2D" parent="map"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="map/Area2D"]
position = Vector2(4, 2.5)
shape = SubResource("RectangleShape2D_sxm4r")

[node name="player" parent="." instance=ExtResource("2_c368n")]
position = Vector2(272, 313)

[connection signal="body_entered" from="prateleiras/Area2D" to="prateleiras" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="prateleiras/Area2D" to="prateleiras" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="prateleiras2/Area2D" to="prateleiras2" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="prateleiras2/Area2D" to="prateleiras2" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="prateleiras3/Area2D" to="prateleiras3" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="prateleiras3/Area2D" to="prateleiras3" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="prateleiras4/Area2D" to="prateleiras4" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="prateleiras4/Area2D" to="prateleiras4" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="prateleiras5/Area2D" to="prateleiras5" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="prateleiras5/Area2D" to="prateleiras5" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="prateleiras6/Area2D" to="prateleiras6" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="prateleiras6/Area2D" to="prateleiras6" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="map/Area2D" to="map" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="map/Area2D" to="map" method="_on_area_2d_body_exited"]
